--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -92,3 +92,22 @@
   font-family: "Ocean";
   src: url("/fonts/Ocean-Semibold.otf") format("truetype");
 }
+
+select,
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+input[type="search"],
+input[type="tel"],
+input[type="color"] {
+  font-size: 16px;
+}
